--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-image-gallery": "^1.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.5",
+    "sweetalert2": "^11.26.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
