--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 
 
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -26,3 +27,7 @@ dist-ssr
 
 # Environment variables
 .env
+.env.local
+.env.development
+.env.production
+.env.test
