feat:Hero de la homepage listo,solo faltan las imagenes-WIP

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@mercadopago/sdk-react": "^1.0.6",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
