--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@mercadopago/sdk-react": "^1.0.6",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "gsap": "^3.13.0",
+    "postprocessing": "^6.38.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -31,6 +35,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.5",
     "sweetalert2": "^11.26.3",
+    "three": "^0.181.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
