--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
     "@mercadopago/sdk-react": "^1.0.6",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
@@ -28,6 +29,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
@@ -36,6 +38,7 @@
     "react-router-dom": "^7.9.5",
     "sweetalert2": "^11.26.3",
     "three": "^0.181.2",
+    "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
